--- a/docker-production.yml
+++ b/docker-production.yml
@@ -26,7 +26,7 @@ services:
     # ports:
     #   - "3000:3000"
     labels:
-      - traefik.http.routers.app.rule=Host(`nodejsdeploy.betorobson`)
+      - traefik.http.routers.app.rule=Host(`nodejsdeploy.betorobson`) || Host(`18.214.25.242`)
       - traefik.enable=true
       - traefik.http.routers.app.entrypoints=web
 
@@ -39,6 +39,6 @@ services:
     #   # The HTTP port
     #   - "3001:80"
     labels:
-      - traefik.http.routers.whoami.rule=Host(`vaiplaneta.localhost`)
+      - traefik.http.routers.whoami.rule=Host(`vaiplaneta.localhost`) || Host(`18.214.25.242`)
       - traefik.enable=true
       - traefik.http.routers.whoami.entrypoints=whoami
