services based on path prefix

--- a/docker-production.yml
+++ b/docker-production.yml
@@ -10,27 +10,37 @@ services:
      - --providers.docker
      - --providers.docker.exposedbydefault=false
      - --entrypoints.web.address=:80
-     - --entrypoints.whoami.address=:3002
     ports:
       # The HTTP port
       - "80:80"
-      - "3002:3002"
       # The Web UI (enabled by --api.insecure=true)
       - "8080:8080"
     volumes:
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
 
-  app:
+  app1:
     build: .
     # ports:
     #   - "3000:3000"
     labels:
-      - traefik.http.routers.app.rule=Host(`nodejsdeploy.betorobson`) || Host(`18.214.25.242`)
+      # - traefik.http.routers.app1.rule=Host(`nodejsdeploy.betorobson`) || Host(`18.214.25.242`)
+      - traefik.http.routers.app1.rule=Host(`localhost`) && PathPrefix(`/app1`)
       - traefik.enable=true
-      - traefik.http.routers.app.entrypoints=web
+      - traefik.http.routers.app1.entrypoints=web
 
-    command: yarn start
+    command: yarn run start1
+
+  app2:
+    build: .
+    # ports:
+    #   - "3000:3000"
+    labels:
+      - traefik.http.routers.app2.rule=Host(`localhost`) && PathPrefix(`/app2`)
+      - traefik.enable=true
+      - traefik.http.routers.app2.entrypoints=web
+
+    command: yarn run start2
 
   whoami:
     # A container that exposes an API to show its IP address
@@ -39,6 +49,7 @@ services:
     #   # The HTTP port
     #   - "3001:80"
     labels:
-      - traefik.http.routers.whoami.rule=Host(`vaiplaneta.localhost`) || Host(`18.214.25.242`)
+      - traefik.http.routers.whoami.rule=Host(`localhost`) && Path(`/whoami`)
+      # - traefik.http.routers.whoami.rule=Host(`vaiplaneta.localhost`) || Host(`18.214.25.242`)
       - traefik.enable=true
-      - traefik.http.routers.whoami.entrypoints=whoami
+      - traefik.http.routers.whoami.entrypoints=web
