--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,5 @@ services:
     build: .
     ports:
       - "3000:3000"
-    command: yarn start
+    command: yarn run start1
+    # restart: on-failure
