example of traefik network app services

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "start1": "node index.js",
-    "start2": "node index2.js"
+    "start2": "node index2.js",
+    "start3": "node index3.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
