--- a/docker-production.yml
+++ b/docker-production.yml
@@ -54,6 +54,18 @@ services:
     command: yarn run start2
     restart: on-failure
 
+  app3:
+    build: .
+    # ports:
+    #   - "3000:3000"
+    # labels:
+    #   - traefik.http.routers.app3.rule=Host(`localhost`) && PathPrefix(`/app3`)
+    #   - traefik.enable=true
+    # - traefik.http.routers.app3.entrypoints=web
+
+    command: yarn run start3
+    restart: on-failure
+
   whoami:
     # A container that exposes an API to show its IP address
     image: containous/whoami
