--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,11 @@ version: "3"
 
 services:
   app:
+    image: nodejsdeploy-app1
     build: .
     ports:
       - "3000:3000"
-    command: yarn run start1
+      - "9229:9229"
+
+    command: node --inspect=0.0.0.0 index.js
     # restart: on-failure
