--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.17.1"
+  },
+  "bit": {
+    "env": {},
+    "componentsDefaultDirectory": "components/{name}",
+    "packageManager": "npm"
   }
 }
