set jenkins tag dev

--- a/docker-production.yml
+++ b/docker-production.yml
@@ -27,7 +27,7 @@ services:
     #   - isolation-network
 
   app1:
-    image: app1:v6
+    image: betorobson/nodejsapp1:jenkins-dev
     labels:
       - traefik.http.routers.app1.rule=Host(`localhost`) && PathPrefix(`/app1`)
       - traefik.enable=true
