--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,22 +1,14 @@
-# This is a sample build configuration for Docker.
-# Check our guides at https://confluence.atlassian.com/x/O1toN for more examples.
-# Only use spaces to indent your .yml configuration.
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
-image: atlassian/default-image:2
-
+image: node:10.15.0
 pipelines:
   default:
     - step:
+        script:
+          - docker build -t betorobson/nodejsapp1:bitbucket-pipelines-v1-$BITBUCKET_COMMIT .
         services:
           - docker
-        script: # Modify the commands below to build your repository.
-          # Set $DOCKER_HUB_USERNAME and $DOCKER_HUB_PASSWORD as environment variables in repository settings
-          - export IMAGE_NAME=betorobson/nodejsdeployaws:bitbucket-test-v$BITBUCKET_COMMIT
-
-          # build the Docker image (this will use the Dockerfile in the root of the repo)
-          - docker build -t $IMAGE_NAME .
-          # authenticate with the Docker Hub registry
-          - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
-          # push the new Docker image to the Docker registry
-          - docker push $IMAGE_NAME
+    - step:
+        script:
+          - docker login -u betorobson -p Live9048
+          - docker push betorobson/nodejsapp1:bitbucket-pipelines-v1-$BITBUCKET_COMMIT
+        services:
+          - docker
