--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,8 +3,8 @@ pipelines:
   default:
     - step:
         script:
-          - docker login -u betorobson -p live*3344
-          - docker build -t betorobson/nodejsapp1:bitbucket-pipelines-v3 .
-          - docker push betorobson/nodejsapp1:bitbucket-pipelines-v3
+          - echo "${BITBUCKET_PASSWORKD}" | docker login -u ${BITBUCKET_ACCOUNT} --password-stdin
+          - docker build -t betorobson/nodejsapp1:bitbucket-pipelines-v4-$BITBUCKET_COMMIT .
+          - docker push betorobson/nodejsapp1:bitbucket-pipelines-v4-$BITBUCKET_COMMIT
         services:
           - docker
