better pipeline yeww

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,9 +7,9 @@ pipelines:
           - IMAGE="${BITBUCKET_ACCOUNT}/nodejsapp1"
           - VERSION="latest branch-master build-number-commit.${BITBUCKET_BUILD_NUMBER}.${BITBUCKET_COMMIT}"
           - BUILD_NAME="${IMAGE}:${VERSION}"
-          - echo "${BITBUCKET_PASSWORKD}" | docker login -u ${BITBUCKET_ACCOUNT} --password-stdin
-          - echo ${BUILD_NAME}
-          - docker build -t ${BUILD_NAME} .
-          - docker push ${BUILD_NAME}
+          - echo "${DOCKERHUB_PASSWORKD}" | docker login -u ${DOCKERHUB_ACCOUNT} --password-stdin
+          # - echo $BUILD_NAME
+          - docker build -t ${DOCKERHUB_ACCOUNT}:bitbucket-pipelines-v5 .
+          - docker push ${DOCKERHUB_ACCOUNT}:bitbucket-pipelines-v5
         services:
           - docker
