--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,7 +9,7 @@ pipelines:
           - BUILD_NAME="${IMAGE}:${VERSION}"
           - echo "${DOCKERHUB_PASSWORKD}" | docker login -u ${DOCKERHUB_ACCOUNT} --password-stdin
           # - echo $BUILD_NAME
-          - docker build -t ${DOCKERHUB_ACCOUNT}:bitbucket-pipelines-v5 .
-          - docker push ${DOCKERHUB_ACCOUNT}:bitbucket-pipelines-v5
+          - docker build -t ${DOCKERHUB_ACCOUNT}/nodejsapp1:bitbucket-pipelines-v5 .
+          - docker push ${DOCKERHUB_ACCOUNT}/nodejsapp1:bitbucket-pipelines-v5
         services:
           - docker
