--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,7 +5,7 @@ pipelines:
         name: Build Docker image and Push to registry
         script:
           - IMAGE="$DOCKERHUB_ACCOUNT/nodejsapp1"
-          - BUILD_TAGS="${IMAGE}:bitbucket-pipelines-v7"
+          - BUILD_TAGS="${IMAGE}:latest ${IMAGE}:branch-master ${IMAGE}:build-number-commit.${BITBUCKET_BUILD_NUMBER}.${BITBUCKET_COMMIT}"
           - echo "${DOCKERHUB_PASSWORKD}" | docker login -u ${DOCKERHUB_ACCOUNT} --password-stdin
           # - echo $BUILD_NAME
           - docker build -t ${BUILD_TAGS} .
