--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,9 +8,10 @@ pipelines:
           - BUILD_TAGS_1="${IMAGE}:latest"
           - BUILD_TAGS_2="${IMAGE}:branch-master"
           - BUILD_TAGS_3="${IMAGE}:build-number-commit.${BITBUCKET_BUILD_NUMBER}.${BITBUCKET_COMMIT}"
+          - BUILD_TAGS="-t ${BUILD_TAGS_1} -t ${BUILD_TAGS_2} -t ${BUILD_TAGS_3}"
           - echo "${DOCKERHUB_PASSWORKD}" | docker login -u ${DOCKERHUB_ACCOUNT} --password-stdin
           # - echo $BUILD_NAME
-          - docker build -t ${BUILD_TAGS_1} -t ${BUILD_TAGS_2} -t ${BUILD_TAGS_3} .
+          - docker build ${BUILD_TAGS} .
           - docker push ${BUILD_TAGS}
         services:
           - docker
