--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "start1": "node index.js",
     "start2": "node index2.js",
-    "start3": "node index3.js"
+    "start3": "node index3.js",
+    "test": "node test.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
