--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -22,7 +22,8 @@ pipelines:
           name: Build Docker image develop and Push to registry
           script:
             - node get-version.js
-            - echo ${NODE_APP_VERSION}
+            - TESTE_VARS=" -- aqui eh o teste --"
+            - echo "[ ${TESTE_VARS} | $TESTE_VARS | ${NODE_APP_VERSION} ]"
             - IMAGE="$DOCKERHUB_ACCOUNT/nodejsapp1"
             - BUILD_TAGS_1="${IMAGE}:develop"
             - BUILD_TAGS_2="${IMAGE}:branch-${BITBUCKET_BRANCH}"
