get version from package.json

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -22,12 +22,11 @@ pipelines:
           name: Build Docker image develop and Push to registry
           script:
             - NODE_APP_VERSION=$(node get-version.js)
-            - TESTE_VARS=" -- aqui eh o teste --"
-            - echo "[ ${TESTE_VARS} | $TESTE_VARS | ${NODE_APP_VERSION} ]"
             - IMAGE="$DOCKERHUB_ACCOUNT/nodejsapp1"
             - BUILD_TAGS_1="${IMAGE}:develop"
-            - BUILD_TAGS_2="${IMAGE}:branch-${BITBUCKET_BRANCH}"
-            - BUILD_TAGS_3="${IMAGE}:build-number-commit.${BITBUCKET_BUILD_NUMBER}.${BITBUCKET_COMMIT}"
+            - BUILD_TAGS_2="${IMAGE}:develop.${NODE_APP_VERSION}"
+            - BUILD_TAGS_3="${IMAGE}:branch-${BITBUCKET_BRANCH}"
+            - BUILD_TAGS_4="${IMAGE}:build-number-commit.${BITBUCKET_BUILD_NUMBER}.${BITBUCKET_COMMIT}"
             - BUILD_TAGS="-t ${BUILD_TAGS_1} -t ${BUILD_TAGS_2} -t ${BUILD_TAGS_3}"
             - echo "${DOCKERHUB_PASSWORKD}" | docker login -u ${DOCKERHUB_ACCOUNT} --password-stdin
             - docker build ${BUILD_TAGS} .
